Upgrade maven dependencies